# fast-light-tg-weather-bot-for-family

./: .dockerignore  .env  Dockerfile  README.md  bot.py  keep_alive.py  pyproject.toml
app/: ai_integration.py  config.py  handlers.py  scheduler.py  storage.py
app/handlers/: __init__.py  admin.py  birthdays.py  city.py  settings.py  start_and_menu.py  weather.py
app/keyboards/: __init__.py  birthdays.py  main_menu.py  services.py  settings.py  weather.py
app/states/: __init__.py  admin.py  birthdays.py  weather.py
app/storage/: __init__.py  birthdays.py  users.py
app/utils/: checker.py  city.py  generator.py  greeting.py  validators.py  weather.py
